# mesh

./: AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NOTICE  README.md  VISION.md  WHY.md  go.work  llms.txt
.github/: dependabot.yml
agentkit/: README.md  crl.go  enroll.go  go.mod  mesh.go  mesh_test.go  toolapproval.go  toolapproval_test.go
console/: README.md  auth.go  authority.go  authority_test.go  enroll.go  go.mod  main.go  ui.go
deploy/: README.md
docs/: API.md  ARCHITECTURE.md  AUDIT-LOGGING.md  BUILD-AN-AGENT.md  CONFIGURATION.md  DEPLOYMENT.md  GLOSSARY.md  INSTALL.md  OPERATIONS.md  PROTOCOL.md  QUICKSTART.md  README.md  SDKS.md  SECURITY.md  TELEMETRY.md  VERSIONING.md
jip/: README.md  authz_test.go  conformance_test.go  crypto_agility_test.go  go.mod  grant.go  jip.go  observer.go  principal_test.go  renewal_test.go  room_hooks_test.go  room_identity_test.go  room_trace_test.go
kernel/: README.md  activate.go  engine.go  engine_test.go  go.mod  process.go  process_test.go  scope_enforce_test.go  store.go  store_delete_test.go  types.go  version.go
monitor/: go.mod  main.go
room-agent/: README.md  (+2 more)
sdks/python/: .gitignore  pyproject.toml
sdks/python/src/j3nna_mesh/: __init__.py  discovery.py  enroll.py  identity.py  mcp.py  rooms.py  wire.py
sdks/python/tests/: live_discover.py  live_enroll.py  test_vectors.py
sdks/rust/: .gitignore  Cargo.toml
sdks/rust/examples/: joiner.rs
sdks/rust/src/: discovery.rs  enroll.rs  error.rs  http.rs  identity.rs  lib.rs  mcp.rs  rooms.rs  wire.rs
sdks/rust/tests/: conformance.rs
(+154 files in other folders)
